--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
   "name": "haproxy-updater",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "ts-node index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@kubernetes/client-node": "^1.1.0",
-    "dotenv": "^16.4.7"
-  },
+  "module": "index.ts",
+  "type": "module",
   "devDependencies": {
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@kubernetes/client-node": "^1.1.0"
   }
 }
