--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,11 +20,9 @@ build:
   tags:
     - dind
   before_script:
-    # Create repository if needed
     - >
       aws ecr create-repository --repository-name ${REPOSITORY_NAME}
       || echo "Repository might have already existed"
-    # Log in to the registry (AWS credentials are stored as GitLab env variables)
     - >
       aws ecr get-login-password
       | docker login
@@ -32,12 +30,8 @@ build:
       --password-stdin
       ${AWS_ECR_URL}
   script:
-    # Build the container image
     - docker build -t ${CONTAINER_IMAGE_TAGGED} .
-    # Build and push container image to registry
     - docker push ${CONTAINER_IMAGE_TAGGED}
-    # Cleanup
-    - docker image rm ${CONTAINER_IMAGE_TAGGED}
 
 deploy:
   stage: deploy
@@ -61,5 +55,4 @@ deploy:
   environment:
     name: production
     kubernetes:
-      # NAMESPACE provided by GitLab
-      namespace: ${K8S_NAMESPACE}
+      namespace: moreillon
