--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,12 +17,14 @@ build:
   stage: build
   only:
     - master
-  tags:
-    - dind
+  # tags:
+  #   - dind
   before_script:
+    # Create repository if needed
     - >
       aws ecr create-repository --repository-name ${REPOSITORY_NAME}
       || echo "Repository might have already existed"
+    # Log in to the registry (AWS credentials are stored as GitLab env variables)
     - >
       aws ecr get-login-password
       | docker login
@@ -30,8 +32,12 @@ build:
       --password-stdin
       ${AWS_ECR_URL}
   script:
+    # Build the container image
     - docker build -t ${CONTAINER_IMAGE_TAGGED} .
+    # Build and push container image to registry
     - docker push ${CONTAINER_IMAGE_TAGGED}
+    # Cleanup
+    - docker image rm ${CONTAINER_IMAGE_TAGGED}
 
 deploy:
   stage: deploy
@@ -55,4 +61,5 @@ deploy:
   environment:
     name: production
     kubernetes:
-      namespace: moreillon
+      # NAMESPACE provided by GitLab
+      namespace: ${K8S_NAMESPACE}
