--- a/kubernetes_manifest.yml
+++ b/kubernetes_manifest.yml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: ${APPLICATION_NAME}
 spec:
-  schedule: "0 * * * *"
+  schedule: "*/15 * * * *"
   jobTemplate:
     spec:
       template:
