--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ services:
 
 variables:
   APPLICATION_NAME: haproxy-updater
-  REPOSITORY_NAME: timeline
+  REPOSITORY_NAME: ${APPLICATION_NAME}
   CONTAINER_IMAGE: ${AWS_ECR_URL}/${REPOSITORY_NAME}
   CONTAINER_IMAGE_TAGGED: ${CONTAINER_IMAGE}:${CI_COMMIT_SHORT_SHA}
   K8S_ECR_SECRET_NAME: ecr-credentials
