--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "To be run with bun",
   "main": "index.js",
   "scripts": {
+    "dev": "NODE_ENV=dev ts-node index.ts",
     "build": "tsc --outdir ./build -p . ",
     "start": "node ./build/index.js"
   },
@@ -15,6 +16,7 @@
     "dotenv": "^16.4.7"
   },
   "devDependencies": {
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
 }
